--- a/Microsoft.Streamye.Cores/Microsoft.Streamye.Cores.csproj
+++ b/Microsoft.Streamye.Cores/Microsoft.Streamye.Cores.csproj
@@ -4,4 +4,10 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.3" />
+        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.3" />
+    </ItemGroup>
+
 </Project>
