--- a/Microsoft.Streamye.Cores/Microsoft.Streamye.Cores.csproj
+++ b/Microsoft.Streamye.Cores/Microsoft.Streamye.Cores.csproj
@@ -10,4 +10,8 @@
         <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Registry\Extensions" />
+    </ItemGroup>
+
 </Project>
