--- a/Microsoft.Streamye.Cores/Microsoft.Streamye.Cores.csproj
+++ b/Microsoft.Streamye.Cores/Microsoft.Streamye.Cores.csproj
@@ -8,6 +8,7 @@
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.3" />
         <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.3" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.3" />
         <PackageReference Include="Consul" Version="1.6.1.1" />
     </ItemGroup>
 
