--- a/Microsoft.Streamye.UnitTests/Microsoft.Streamye.UnitTests.csproj
+++ b/Microsoft.Streamye.UnitTests/Microsoft.Streamye.UnitTests.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Microsoft.Streamye.Commons\Microsoft.Streamye.Commons.csproj" />
       <ProjectReference Include="..\Microsoft.Streamye.Cores\Microsoft.Streamye.Cores.csproj" />
     </ItemGroup>
 
