--- a/Microsoft.Streamye.Cores/Microsoft.Streamye.Cores.csproj
+++ b/Microsoft.Streamye.Cores/Microsoft.Streamye.Cores.csproj
@@ -12,4 +12,8 @@
         <PackageReference Include="Consul" Version="1.6.1.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="MicroClients" />
+    </ItemGroup>
+
 </Project>
