--- a/Microsoft.Streamye.Cores/Microsoft.Streamye.Cores.csproj
+++ b/Microsoft.Streamye.Cores/Microsoft.Streamye.Cores.csproj
@@ -10,10 +10,7 @@
         <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.3" />
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.3" />
         <PackageReference Include="Consul" Version="1.6.1.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="MicroClients" />
+        <PackageReference Include="Castle.Core" Version="4.4.1" />
     </ItemGroup>
 
 </Project>
