--- a/Microsoft.Streamye.Commons/Microsoft.Streamye.Commons.csproj
+++ b/Microsoft.Streamye.Commons/Microsoft.Streamye.Commons.csproj
@@ -4,4 +4,10 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
+    </ItemGroup>
+
 </Project>
