--- a/Microsoft.Streamye.Cores/Microsoft.Streamye.Cores.csproj
+++ b/Microsoft.Streamye.Cores/Microsoft.Streamye.Cores.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.3" />
         <PackageReference Include="Consul" Version="1.6.1.1" />
         <PackageReference Include="Castle.Core" Version="4.4.1" />
+        <PackageReference Include="DotNetCore.CAP" Version="3.0.3" />
     </ItemGroup>
 
 </Project>
