--- a/Microsoft.Streamye.ProductServices/Microsoft.Streamye.ProductServices.csproj
+++ b/Microsoft.Streamye.ProductServices/Microsoft.Streamye.ProductServices.csproj
@@ -5,4 +5,13 @@
         <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Microsoft.Streamye.Commons\Microsoft.Streamye.Commons.csproj" />
+      <ProjectReference Include="..\Microsoft.Streamye.Cores\Microsoft.Streamye.Cores.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Dtos\Outputs" />
+    </ItemGroup>
+
 </Project>
