--- a/Microsoft.Streamye.SecKillServices/Microsoft.Streamye.SecKillServices.csproj
+++ b/Microsoft.Streamye.SecKillServices/Microsoft.Streamye.SecKillServices.csproj
@@ -6,12 +6,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers" />
-      <Folder Include="dtos" />
+      <Folder Include="Dtos\Outputs" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Microsoft.Streamye.Commons\Microsoft.Streamye.Commons.csproj" />
       <ProjectReference Include="..\Microsoft.Streamye.Cores\Microsoft.Streamye.Cores.csproj" />
+      <ProjectReference Include="..\Microsoft.Streamye.OrderServices\Microsoft.Streamye.OrderServices.csproj" />
     </ItemGroup>
 
 </Project>
