--- a/Microsoft.Streamye.OrderServices/appsettings.json
+++ b/Microsoft.Streamye.OrderServices/appsettings.json
@@ -6,5 +6,23 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=orderservices;uid=root;pwd=root;CharSet=utf8"
+  },
+  "ConsulRegistry": {
+    "ServiceName": "OrderServices",
+    "ServiceAddress": "http://localhost:5002",
+    "RegistryAddress": "http://127.0.0.1:8500",
+    "HealthCheckAddress": "/HealthCheck"
+  },
+  "Cap": {
+    "RabbitMQ.HostName": "localhost",
+    "RabbitMQ.UserName": "guest",
+    "RabbitMQ.Password": "guest",
+    "RabbitMQ.Port": 5672,
+    "RabbitMQ.VirtualHost": "/",
+    "FailedRetryInterval": 3,
+    "FailedRetryCount": 10
+  }
 }
