--- a/Microsoft.Streamye.Commons/Microsoft.Streamye.Commons.csproj
+++ b/Microsoft.Streamye.Commons/Microsoft.Streamye.Commons.csproj
@@ -8,6 +8,8 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
+
+        <PackageReference Include="AutoMapper" Version="9.0.0" />
     </ItemGroup>
 
 </Project>
