--- a/Microsoft.Streamye.Cores/Microsoft.Streamye.Cores.csproj
+++ b/Microsoft.Streamye.Cores/Microsoft.Streamye.Cores.csproj
@@ -5,13 +5,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-        <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.3" />
-        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.3" />
-        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.3" />
-        <PackageReference Include="Consul" Version="1.6.1.1" />
-        <PackageReference Include="Castle.Core" Version="4.4.1" />
-        <PackageReference Include="DotNetCore.CAP" Version="3.0.3" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
+        <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.3"/>
+        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.3"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.3"/>
+        <PackageReference Include="Consul" Version="1.6.1.1"/>
+        <PackageReference Include="Castle.Core" Version="4.4.1"/>
+        <PackageReference Include="DotNetCore.CAP" Version="3.0.3"/>
+        <PackageReference Include="DotNetCore.CAP.Dashboard" Version="3.0.3"/>
+        <PackageReference Include="DotNetCore.CAP.InMemoryStorage" Version="3.0.3"/>
+        <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="3.0.3"/>
+        <PackageReference Include="DotNetCore.CAP.MySql" Version="3.0.3"/>
     </ItemGroup>
 
 </Project>
