--- a/Microsoft.Streamye.UserServices/Microsoft.Streamye.UserServices.csproj
+++ b/Microsoft.Streamye.UserServices/Microsoft.Streamye.UserServices.csproj
@@ -6,12 +6,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Dtos" />
+        <Folder Include="Dtos" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Microsoft.Streamye.Commons\Microsoft.Streamye.Commons.csproj" />
-      <ProjectReference Include="..\Microsoft.Streamye.Cores\Microsoft.Streamye.Cores.csproj" />
+        <ProjectReference Include="..\Microsoft.Streamye.Commons\Microsoft.Streamye.Commons.csproj" />
+        <ProjectReference Include="..\Microsoft.Streamye.Cores\Microsoft.Streamye.Cores.csproj" />
+        <PackageReference Include="IdentityServer4" Version="3.1.3" />
+        <PackageReference Include="IdentityServer4.EntityFramework" Version="3.1.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
+        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.2" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.6"/>
     </ItemGroup>
 
 </Project>
