--- a/Microsoft.Streamye.UserServices/appsettings.json
+++ b/Microsoft.Streamye.UserServices/appsettings.json
@@ -8,6 +8,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=userservices;uid=root;pwd=root;CharSet=utf8"
+    "DefaultConnection": "server=172.26.116.229;port=3306;database=userservices;uid=yxx;pwd=123456;CharSet=utf8"
+  },
+  "ConsulRegistry": {
+    "ServiceName": "UserServices",
+    "ServiceAddress": "http://localhost:5005",
+    "RegistryAddress": "http://localhost:8500",
+    "HealthCheckAddress": "/HealthCheck"
   }
 }
