--- a/Microsoft.Streamye.UserServices/Properties/launchSettings.json
+++ b/Microsoft.Streamye.UserServices/Properties/launchSettings.json
@@ -17,7 +17,7 @@
     },
     "Microsoft.Streamye.UserServices": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "http://localhost:5005",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
