--- a/Microsoft.streamye.SeckillAggregateServices/Microsoft.Streamye.SeckillAggregateServices.csproj
+++ b/Microsoft.streamye.SeckillAggregateServices/Microsoft.Streamye.SeckillAggregateServices.csproj
@@ -6,6 +6,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="IdentityModel" Version="4.2.0"/>
+    </ItemGroup>
+    <ItemGroup>
         <ProjectReference Include="..\Microsoft.Streamye.Commons\Microsoft.Streamye.Commons.csproj"/>
         <ProjectReference Include="..\Microsoft.Streamye.Cores\Microsoft.Streamye.Cores.csproj"/>
     </ItemGroup>
